<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/button_loginBack"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/arrow_back_icon"
                    android:onClick="customBack"/>

                <TextView
                    android:id="@+id/login_header"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/login_page_login"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/login_subheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login_page_login_message"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconContentDescription="Email Icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/lock_icon"
            app:startIconContentDescription="Password Icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_login"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login_page_login"/>

        <Button
            android:id="@+id/login_recoverPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login_page_forgot"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:background="@drawable/spinner_background"

        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>